# librebooks

./: Cargo.toml
librebooks-core/: Cargo.toml
librebooks-core/src/: errors.rs  lib.rs  macros.rs  metadata.rs
librebooks-ui/: Cargo.toml  build.rs
librebooks-ui/res/: resources.gresource  resources.xml
librebooks-ui/res/ui/: main_window.ui  main_window.ui~
librebooks-ui/src/: app.rs  errors.rs  main.rs  resources.rs
