[package]
name = "librebooks-core"
version = "0.1.0"
authors = ["Vlad Verestiuc <verestiuc.vlad@gmail.com>"]

[dependencies]

gstreamer = "0.11.3"
gstreamer-audio = "0.11.3"
gstreamer-player = "0.11.3"
id3 = "0.2.3"
byteorder = "1.2.3"
serde = "1.0.70"
serde_json = "1.0.22"
serde_derive = "1.0.70"
error-chain = "0.12.0"
glib = "0.5.0"
