[package]
name = "librebooks-ui"
version = "0.1.0"
authors = ["Vlad Verestiuc <verestiuc.vlad@gmail.com>"]

[dependencies]
error-chain = "0.12.0"
gtk = {version = "0.4.1", features=["v3_22"]}
gio = "0.4.1"
glib = "0.5.0"
lazy_static = "1.0.1"
chrono = "0.4.4"
relm = "0.14.6"
relm-attributes = "0.14.6"
relm-derive = "0.14.6"
librebooks-core = { path = "../librebooks-core" }
